codeblocks not full width, fix padding on mobile, fix copy button scroll

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -203,12 +203,6 @@ pre {
   backdrop-filter: blur(10px);
   border-radius: 6px;
 
-  @media (max-width: $on-large) {
-    margin-left: -8px;
-    margin-right: -8px;
-    border-radius: 0;
-  }
-
   @extend %vertical-rhythm;
 }
 
